# TestWork24

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  models.py  router.py  schemas.py  scraper.py  tasks.py
