[tool.poetry]
name = "quotes-task"
version = "0.1.0"
description = ""
authors = ["baktiyar <baktiarzaksylykov22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.43"
celery = "^5.5.3"
redis = "^6.4.0"
bs4 = "^0.0.2"
pymongo = "^4.15.1"
motor = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
